[gd_scene load_steps=4 format=2]

[ext_resource path="res://MainMenu.tscn" type="PackedScene" id=1]
[ext_resource path="res://GameUI.tscn" type="PackedScene" id=2]
[ext_resource path="res://Main.gd" type="Script" id=4]

[node name="Main" type="Node"]
script = ExtResource( 4 )

[node name="WorldContainer" type="Node2D" parent="."]

[node name="EnemyContainer" type="Node2D" parent="."]

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="UIContainer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainMenu" parent="UIContainer" instance=ExtResource( 1 )]

[node name="GameUI" parent="UIContainer" instance=ExtResource( 2 )]
visible = false
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
[connection signal="GameStart" from="UIContainer/MainMenu" to="." method="_on_MainMenu_GameStart"]
[connection signal="QuitGame" from="UIContainer/MainMenu" to="." method="_on_MainMenu_QuitGame"]
